<resources>
    <string name="app_name">ProfileCardApp</string>
    <string name="cd_app_icon">App icon</string>
    <string name="login_title">Sign in</string>
    <string name="hint_username">Username or email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="toast_missing_fields">Please enter username and password</string>
    <string name="toast_signed_in">Signed in</string>
    <string name="app_name2">ProfileCard</string>
    <string name="profile_name">Lattapol Salaewong</string>
    <string name="profile_major">สาขาเทคโนโลยีสารสนเทศ</string>
    <string name="profile_major2">วิทยาลัยเทคโนโลยีภาคตะวันออก (อี.เทค)</string>
    <string name="btn_contact">ติดต่อฉัน</string>
    <string name="desc_profile_image">รูปโปรไฟล์ของผู้ใช้</string>
</resources>
